--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:theme="@style/Theme.EvaluableT3_PMDM"
             tools:targetApi="31">
         <activity
-                android:name=".activities.MainActivity"
+                android:name=".activities.LoginActivity"
                 android:exported="true"
                 android:label="@string/app_name"
                 android:theme="@style/Theme.EvaluableT3_PMDM">
