--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
             android:theme="@style/Theme.EvaluableT3_PMDM"
             tools:targetApi="31">
         <activity
+                android:name=".activities.MainActivity"
+                android:exported="false"
+                android:theme="@style/Theme.EvaluableT3_PMDM" />
+        <activity
                 android:name=".activities.LoginActivity"
                 android:exported="true"
                 android:label="@string/app_name"
