--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:theme="@style/Theme.EvaluableT3_PMDM"
             tools:targetApi="31">
         <activity
-                android:name=".activities.MainActivity"
+                android:name=".activities.LeaguesActivity"
                 android:exported="false"
                 android:theme="@style/Theme.EvaluableT3_PMDM" />
         <activity
